--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Connection Info. rloreto</h1>
+    <h1 class="display-4">Connection Info. 1</h1>
 </div>
 
 <table class="table table-striped table-hover table-condensed">
